<?xml version="1.0"?>
<package format="3">
  <name>communication</name>
  <version>0.0.0</version>
  <description>TODO: This is a communication tutorials for ROS2.</description>
  <maintainer email="gorilla_robot@126.com">gorilla</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
